@@ -1,2 +1,5 @@
 Tue Aug 21
  - gnucap-adms available
+
+Sep 01
+ - added opamp device model
